# volume-rendering-through-path-tracing

./: .gitignore  CMakeLists.txt  README.md  sceneFile.txt
include/: AABB.h  AbsMaterial.h  AreaLight.h  BSDF.h  BVHNode.h  BeersLawHeterogeneousMaterial.h  BeersLawHeterogeneousVolume.h  BeersLawMaterial.h  BeersLawVolume.h  Camera.h  Canvas.h  Computation.h  Config.h  Dielectric.h  DielectricBSDF.h  EmptyVolume.h  Group.h  Image.h  Intersection.h  IsotropicPhaseBSDF.h  Lambertian.h  LambertianBSDF.h  Light.h  LightEmitting.h  Material.h  Metal.h  MetalBSDF.h  NGLScene.h  ObjFile.h  OldMaterial.h  Perlin.h  Pixel.h  Ray.h  RendererServices.h  Scene.h  Shape.h  SingleScatterHomogeneousMaterial.h  Sphere.h  TestShape.h  Transformations.h  (+5 more)
include/bsdfs/: DielectricBSDF.h  IsotropicPhaseBSDF.h  LambertianBSDF.h  LightEmittingBSDF.h  MetalBSDF.h  TrivialBSDF.h
include/materials/: BeersLawHeterogeneousMaterial.h  BeersLawMaterial.h  Dielectric.h  Lambertian.h  LightEmitting.h  Metal.h  SingleScatterHeterogeneousMaterial.h  SingleScatterHomogeneousMaterial.h
include/volumes/: BeersLawHeterogeneousVolume.h  BeersLawVolume.h  EmptyVolume.h  SingleScatterHeterogeneousVolume.h  SingleScatterHomogeneousVolume.h
json/: input.json
shaders/: PixelFragment.glsl  PixelVertex.glsl  TextureFragment.glsl
src/: AABB.cpp  AreaLight.cpp  BVHNode.cpp  BeersLawHeterogeneousMaterial.cpp  BeersLawHeterogeneousVolume.cpp  BeersLawMaterial.cpp  BeersLawVolume.cpp  Camera.cpp  Canvas.cpp  Computation.cpp  Config.cpp  Dielectric.cpp  DielectricBSDF.cpp  EmptyVolume.cpp  Group.cpp  Image.cpp  Intersection.cpp  IsotropicPhaseBSDF.cpp  Lambertian.cpp  LambertianBSDF.cpp  Light.cpp  LightEmitting.cpp  LightEmittingBSDF.cpp  Material.cpp  Metal.cpp  MetalBSDF.cpp  NGLScene.cpp  ObjFile.cpp  OldMaterial.cpp  Perlin.cpp  Ray.cpp  RendererServices.cpp  Scene.cpp  Shape.cpp  SingleScatterHomogeneousMaterial.cpp  SingleScatterHomogeneousVolume.cpp  Sphere.cpp  TestShape.cpp  Transformations.cpp  Triangle.cpp  (+3 more)
src/bsdfs/: DielectricBSDF.cpp  IsotropicPhaseBSDF.cpp  LambertianBSDF.cpp  LightEmittingBSDF.cpp  MetalBSDF.cpp  TrivialBSDF.cpp
src/materials/: BeersLawHeterogeneousMaterial.cpp  BeersLawMaterial.cpp  Dielectric.cpp  Lambertian.cpp  LightEmitting.cpp  Metal.cpp  SingleScatterHeterogeneousMaterial.cpp  SingleScatterHomogeneousMaterial.cpp
src/volumes/: BeersLawHeterogeneousVolume.cpp  BeersLawVolume.cpp  EmptyVolume.cpp  SingleScatterHeterogeneousVolume.cpp  SingleScatterHomogeneousVolume.cpp
tests/: CameraTests.cpp  CanvasTests.cpp  GroupTests.cpp  IntersectionTests.cpp  LightTests.cpp  MaterialTests.cpp  ObjFileTests.cpp  OldMaterialTests.cpp  PixelTests.cpp  RayTests.cpp  SceneTests.cpp  ShapeTests.cpp  SphereTests.cpp  TransformationsTests.cpp  TriangleTests.cpp  TupleTests.cpp
